# MyBlog

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_choice_question_delete_article_delete_category_and_more.py  0003_article_category_delete_choice_delete_question_and_more.py
blog/serializers/: blog.py
core/: manage.py
core/MyBlog/: urls.py
core/MyBlog/settings/: __init__.py  base.py  docker.py
core/MyBlog/settings/templates/: settings.dev.py
core/core/utils/: collections.py
djangoBlog/: settings.py  urls.py
local/: settings.dev.py
